setup for master/slave topology